# netbox-branch-review

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: QUICKSTART.md
netbox_branch_review/: __init__.py  choices.py  forms.py  models.py  models.py.bak  navigation.py  plugin.py  signals.py  tables.py  urls.py  validators.py  views.py
netbox_branch_review/migrations/: 0001_initial.py
netbox_branch_review/templates/netbox_branch_review/: changerequest.html  changerequest_list.html
