[build-system]
requires = ["setuptools>=66", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-branch-review"
version = "0.1.0"
description = "Branch Review for NetBox"
requires-python = ">=3.10"

[tool.setuptools]
include-package-data = true
[tool.setuptools.package-data]
"netbox_branch_review" = ["templates/**/*.html"]

[tool.setuptools.packages.find]
where = ["."]
include = ["netbox_branch_review*"]
namespaces = false
